[package]
name = "bitbang-wiegand"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

[dependencies]
bit_field = "0.9.0"
nb = "0.1.1"
bitrate = "0.1.1"
futures = { version = "0.1", optional = true }

[features]
unstable = ["futures"]

[dependencies.embedded-hal]
version = "~0.2"
features = ["unproven"]

[dev-dependencies.rppal]
git = "https://github.com/golemparts/rppal.git"
rev  = "abd9d4da"
features = ["hal-unproven"]
